k8s/ingress/mediapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mediapp.local
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mediapp-service
                port:
                  number: 8080

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mediapp-frontend
                port:
                  number: 80
